--- a/p5js-elements.html
+++ b/p5js-elements.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
-    <meta charset="utf-8" />
+<head>
+    <title>Elements of Design</title>
+    <style>
+        body {
+            background-color: #839791;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
 
-  </head>
-  <body>
-    <main>
-    </main>
+        h1 {
+            font-family: 'DM Serif Display';
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
+        #image-container {
+            width: 90%;
+            margin: 0 auto;
+        }
+
+        #image {
+            width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <h1 style="font-family: 'DM Serif Display';">Elements of Design</h1>
+
+    <input type="radio" id="aiHuman" name="image" value="aihuman" checked>
+    <label for="aiHuman">AI vs Human</label>
+    <input type="radio" id="negative" name="image" value="negative">
+    <label for="negative">Negative</label>
+    <input type="radio" id="dots" name="image" value="dots">
+    <label for="dots">Dots</label>
+    <input type="radio" id="colours" name="image" value="colours">
+    <label for="colours">Colours</label>
+    <br><br>
+
+    <div id="image-container">
+        <img id="image" src="images/aihuman.png" alt="Image">
+    </div>
+
     <script src="script/elements.js"></script>
-  </body>
+</body>
 </html>
