--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,6 @@
             font-family: 'Binate', sans-serif;
             display: flex;
             flex-direction: column;
-            height: 100vh;
             min-height: 100vh;
         }
 
@@ -20,38 +19,54 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px;
+            flex-wrap: wrap;
         }
 
         header a {
             text-decoration: none;
             color: black;
             font-family: 'Droid Serif', serif;
-            margin: 0 15px;
+            margin: 5px 15px;
         }
 
         .logo {
             width: 120px;
-            height: 60px;
+            height: auto;
             padding-left: 20px;
+        }
+
+        nav {
+            display: flex;
+            flex-wrap: wrap;
         }
 
         main {
             flex: 1;
             display: flex;
-            overflow: hidden;
+            flex-direction: row;
+            align-items: stretch;
         }
 
         .left-section {
             flex: 1;
             padding: 20px;
-            padding-left: 40px;
+            padding-top: 100px;
+            padding-left: 100px;
+            box-sizing: border-box;
         }
 
         .right-section {
             flex: 1;
             display: flex;
-            align-items: flex-end;
+            align-items: center;
             justify-content: center;
+        }
+
+        .right-section img {
+            width: auto;
+            max-width: 100%;
+            height: 100%; /* Ensures the image stretches to fill height */
+            object-fit: cover;
         }
 
         .grid-container {
@@ -59,8 +74,7 @@
             grid-template-columns: repeat(3, 1fr);
             gap: 30px;
             margin: 0 auto;
-            width: 100%;
-            padding-top: 100px;
+            padding-top: 20px;
         }
 
         .grid-item {
@@ -73,7 +87,7 @@
         }
 
         .grid-item:hover {
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
 
         .overlay {
@@ -97,7 +111,6 @@
         footer {
             background-color: #F5F5F5;
             text-align: center;
-            margin-top: auto;
             padding: 10px 0;
         }
 
@@ -113,13 +126,12 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 70%; /* Increased by 10% */
-            height: 85%; /* Increased by 10% */
+            width: 90%;
+            height: 85%;
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
             z-index: 1000;
-            overflow: hidden;
         }
 
         .modal iframe {
@@ -127,7 +139,6 @@
             height: 100%;
             border: none;
             border-radius: 10px;
-            object-fit: contain;
         }
 
         .modal-overlay {
@@ -153,19 +164,56 @@
             cursor: pointer;
         }
 
+        @media (max-width: 1024px) {
+            .grid-container {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 20px;
+            }
+        }
+
         @media (max-width: 768px) {
+            main {
+                flex-direction: column;
+            }
+
+            header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
             .grid-container {
                 grid-template-columns: 1fr;
                 gap: 15px;
             }
 
-            .modal {
-                width: 90%;
-                height: 80%; /* Slightly increased for small screens */
+            .right-section {
+                padding: 10px;
+                text-align: center;
             }
 
-            .right-section img {
-                width: 100%;
+            .modal {
+                width: 95%;
+                height: 75%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            nav a {
+                margin: 5px 10px;
+                font-size: 0.9em;
+            }
+
+            .logo {
+                width: 100px;
+            }
+
+            .overlay {
+                font-size: 0.8em;
+            }
+
+            .modal {
+                width: 90%;
+                height: 70%;
             }
         }
     </style>
@@ -226,7 +274,7 @@
                 </div>
                 <div class="grid-item" onclick="openModal('http://flexhub.work')">
                     <img src="images/flexhub.png" alt="Programming Experiences">
-                    <div class="overlay">Programming Experiences</div>
+                    <div class="overlay">Branding Project</div>
                 </div>
                 <div class="grid-item" onclick="openModal('contact.html')">
                     <img src="images/pythonproject.png" alt="Contact Me">
@@ -239,7 +287,6 @@
         </section>
     </main>
 
-    <!-- Modal and overlay -->
     <div id="modal-overlay" class="modal-overlay" onclick="closeModal()"></div>
     <div id="modal" class="modal">
         <button class="modal-close" onclick="closeModal()">Close</button>
