--- a/p5js-lights.html
+++ b/p5js-lights.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      body {
+          background-color: #839791;
+          margin: 0;
+          font-family: 'Binate', sans-serif;
+          display: flex;
+          flex-direction: column;
+          height: 100vh;
+      }
+      </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <meta charset="utf-8" />
@@ -9,6 +19,6 @@
   <body>
     <main>
     </main>
-    <script src="script/lights.js"></script>
+     <script src="script/lights.js"></script>
   </body>
 </html>
