--- a/p5js-lights.html
+++ b/p5js-lights.html
@@ -9,6 +9,7 @@
           display: flex;
           flex-direction: column;
           height: 100vh;
+          align-items: center;
       }
       </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
