updated code to display canvas in center

--- a/p5js-lights.html
+++ b/p5js-lights.html
@@ -68,11 +68,15 @@
         <p><strong>P5JS Elements:</strong> The program utilizes various "P5JS" drawing functions, such as rect, ellipse, line, bezier, and arc, and effectively organizes functionality into separate methods. For instance, house is used for drawing the house, createStar for generating stars, and printLight for displaying the house lights and handling user interactions via mouse clicks, by handling mouse clicks in mousePressed method.</p>
     </div>
     <div class="center-part">
-        P5JS Project - Showcasing Animation
-        <script src="script/lights.js"></script>
+        <div id="canvas-container">
+            P5JS Project - Showcasing Animation
+        </div>
     </div>
     <div class="right-side">
         <!-- Right-side content if needed -->
     </div>
+
+    <!-- Move the script to the end of the body for better control over loading and canvas positioning -->
+    <script src="script/lights.js"></script>
 </body>
 </html>
