--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         header a {
             text-decoration: none;
             color: black;
-            font-family: 'Droid Serif', serif;
+            font-family: 'Times new roman', serif;
             margin: 0 15px;
         }
 
@@ -54,8 +54,19 @@
             justify-content: center;
         }
 
-        .large-text-l1, .large-text-l2, .body-text-l3 {
+        .large-text-l1, .large-text-l2 {
             font-family: 'DM Serif Display', serif;
+            font-size: calc(3vw + 2vh);
+            line-height: 1.2;
+            margin-bottom: 5px;
+            white-space: nowrap;
+            overflow: hidden;
+            border-right: 3px solid black;
+            display: inline-block;
+        }
+
+         .body-text-l3 {
+            font-family:  sans-serif;
             font-size: calc(3vw + 2vh);
             line-height: 1.2;
             margin-bottom: 5px;
