--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
     <script>
         const textLine1 = "Hello,";
         const textLine2 = "I am Sonia.";
-        const textLine3 = "I am a compassionate, creative design enthusiast blending";
+        const textLine3 = "A compassionate, creative design enthusiast blending";
         const textLine4 = "artistry with user-focused innovation. I value diverse ";
-        const textLine5 = "experiences & am driven by positivity & love for discovery.";
+        const textLine5 = "experiences & am driven by positivity & discovery.";
 
         const typewriterElement1 = document.getElementById('typewriterLine1');
         const typewriterElement2 = document.getElementById('typewriterLine2');
