changes for parameterise openmodal

--- a/projects.html
+++ b/projects.html
@@ -218,12 +218,14 @@
         }
     </style>
     <script>
-        function openModal(src) {
+        function openModal(src, width = '90%', height = '85%') {
             const modal = document.getElementById('modal');
             const iframe = document.getElementById('modal-iframe');
             const overlay = document.getElementById('modal-overlay');
             
             iframe.src = src;
+            modal.style.width = width;
+            modal.style.height = height;
             modal.style.display = 'block';
             overlay.style.display = 'block';
         }
@@ -256,23 +258,23 @@
         <section class="left-section">
             <div class="grid-container">
                 <!-- Grid items -->
-                <div class="grid-item" onclick="openModal('p5js-lights.html')">
+                <div class="grid-item" onclick="openModal('p5js-lights.html','80%', '70%')">
                     <img src="images/p5jsproject.png" alt="About Me">
                     <div class="overlay">P5JS Project</div>
                 </div>
-                <div class="grid-item" onclick="openModal('book.html')">
+                <div class="grid-item" onclick="openModal('book.html','90%', '85%')">
                     <img src="images/gridbook.png" alt="About Me">
                     <div class="overlay">Saptha</div>
                 </div>
-                <div class="grid-item" onclick="openModal('p5js-elements.html')">
+                <div class="grid-item" onclick="openModal('p5js-elements.html','80%', '85%')">
                     <img src="images/elementsofdesign.png" alt="Elements of Design">
                     <div class="overlay">Elements of Design</div>
                 </div>
-                <div class="grid-item" onclick="openModal('https://scratch.mit.edu/projects/1094015497/embed')">
+                <div class="grid-item" onclick="openModal('https://scratch.mit.edu/projects/1094015497/embed','80%', '70%')">
                     <img src="images/scratch.png" alt="Scratch">
                     <div class="overlay">Scratch Project</div>
                 </div>
-                <div class="grid-item" onclick="openModal('http://flexhub.work')">
+                <div class="grid-item" onclick="openModal('http://flexhub.work','80%', '70%')">
                     <img src="images/flexhub.png" alt="Programming Experiences">
                     <div class="overlay">Branding Project</div>
                 </div>
