--- a/book.html
+++ b/book.html
@@ -38,9 +38,9 @@
         }
 
         .page img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Ensures the image covers the entire space */
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain; /* Maintain aspect ratio without cutting off */
         }
 
         /* Add page turning transition */
@@ -82,62 +82,12 @@
 
     <script>
         let currentPage = 1;
-        let totalPages = 9;
+        const totalPages = 9;
         const pageContainer = document.getElementById("currentPage");
         const pageImage = document.getElementById("pageImage");
 
-        // Track touch events for swipe detection
-        let touchStartX = 0;
-        let touchEndX = 0;
-
-        // Initialize scroll event
-        window.addEventListener('wheel', handleScroll);
-
-        // Initialize touch events for swipe gestures
-        window.addEventListener('touchstart', handleTouchStart);
-        window.addEventListener('touchend', handleTouchEnd);
-
         // Initialize mouse click events
         window.addEventListener('mousedown', handleMouseClick);
-
-        function handleScroll(event) {
-            if (event.deltaY > 0) { // Scrolling up (next page)
-                if (currentPage < totalPages) {
-                    currentPage++;
-                    updatePage('scroll-up');
-                }
-            } else { // Scrolling down (previous page)
-                if (currentPage > 1) {
-                    currentPage--;
-                    updatePage('scroll-down');
-                }
-            }
-        }
-
-        function handleTouchStart(event) {
-            // Store the initial touch position
-            touchStartX = event.changedTouches[0].screenX;
-        }
-
-        function handleTouchEnd(event) {
-            // Calculate the movement direction
-            touchEndX = event.changedTouches[0].screenX;
-
-            // If swipe is more than 50px horizontally, determine direction
-            if (Math.abs(touchEndX - touchStartX) > 50) {
-                if (touchEndX < touchStartX) {  // Swipe left (previous page)
-                    if (currentPage > 1) {
-                        currentPage--;
-                        updatePage('scroll-down');
-                    }
-                } else {  // Swipe right (next page)
-                    if (currentPage < totalPages) {
-                        currentPage++;
-                        updatePage('scroll-up');
-                    }
-                }
-            }
-        }
 
         function handleMouseClick(event) {
             if (event.button === 0) { // Left click (previous page)
@@ -154,22 +104,15 @@
         }
 
         function updatePage(scrollDirection) {
-            let pageImageSrc;
-
-            // Update image based on the current page
-            pageImageSrc = `images/bookpage${currentPage}.png`;
-
-            // Set the new image source
+            const pageImageSrc = `images/bookpage${currentPage}.png`;
             pageImage.src = pageImageSrc;
 
-            // Add transition classes based on scroll direction
             if (scrollDirection === 'scroll-up') {
                 pageContainer.classList.add('scroll-up');
             } else if (scrollDirection === 'scroll-down') {
                 pageContainer.classList.add('scroll-down');
             }
 
-            // Reset transition after the animation ends to prevent overlapping
             setTimeout(() => {
                 pageContainer.classList.remove('scroll-up', 'scroll-down');
             }, 500);
