--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             background-color: #EFD5C3;
             margin: 0;
-            font-family: 'Binate', sans-serif;
+            font-family: 'Trebuchet MS';
             display: flex;
             flex-direction: column;
             height: 100vh;
@@ -24,7 +24,7 @@
         header a {
             text-decoration: none;
             color: black;
-            font-family: 'Times new roman', serif;
+            font-family: 'Modern Serif Fonts';
             margin: 0 15px;
         }
 
@@ -55,9 +55,9 @@
         }
 
         .large-text-l1, .large-text-l2 {
-            font-family: 'DM Serif Display', serif;
+            font-family: 'Modern Serif Fonts';
             font-size: calc(3vw + 2vh);
-            line-height: 1.2;
+            line-height: 0.9;
             margin-bottom: 5px;
             white-space: nowrap;
             overflow: hidden;
@@ -66,9 +66,9 @@
         }
 
          .body-text-l3 {
-            font-family:  sans-serif;
+            font-family:  'Trebuchet MS';
             font-size: calc(3vw + 2vh);
-            line-height: 1.2;
+            line-height: 1;
             margin-bottom: 5px;
             white-space: nowrap;
             overflow: hidden;
@@ -76,12 +76,19 @@
             display: inline-block;
         }
 
+
+        .large-text-l1 {
+            font-size: calc(5.5vw);
+            margin-top: 120px;
+        }
+
         .large-text-l2 {
-            margin-top: 5px;
+            font-size: calc(5.5vw);
+            margin-top: 12px;
         }
 
         .body-text-l3 {
-            font-size: calc(2vw);
+            font-size: calc(1.75vw);
             margin-top: 5px;
         }
 
@@ -94,6 +101,7 @@
 
         footer {
             background-color: #F5F5F5;
+            font-family:  'Trebuchet MS';
             text-align: center;
             margin-top: auto;
             padding: 10px;
