sonias changes font

--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
         header a {
             text-decoration: none;
             color: black;
-            font-family: 'Modern Serif Fonts';
+            font-family: 'Georgia';
             margin: 0 15px;
         }
 
