--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         header a {
             text-decoration: none;
             color: black;
-            font-family: 'Modern Serif Fonts';
+            font-family: 'Georgia';
             margin: 0 15px;
         }
 
@@ -55,7 +55,7 @@
         }
 
         .large-text-l1, .large-text-l2 {
-            font-family: 'Modern Serif Fonts';
+            font-family: 'Georgia';
             font-size: calc(3vw + 2vh);
             line-height: 0.9;
             margin-bottom: 5px;
