Modified Aboutme page layout and images.

--- a/aboutme.html
+++ b/aboutme.html
@@ -81,6 +81,23 @@
             transition: transform 0.3s, opacity 0.3s;
             cursor: pointer;
         }
+        .left-image-top-left {
+            width: 30%;
+            max-width: 250px;
+            height: auto;
+            transition: transform 0.3s, opacity 0.3s;
+            cursor: pointer;
+            padding-left: 100px;
+        }
+        .left-image-top-right {
+            width: 30%;
+            max-width: 250px;
+            height: auto;
+            transition: transform 0.3s, opacity 0.3s;
+            cursor: pointer;
+            padding-right: 100px;
+        }
+
 
         .left-image:hover {
             transform: scale(1.1);
@@ -128,12 +145,13 @@
         <section class="left-section" onclick="resetImages(event)">
             <!-- First Row of Images -->
             <div class="row">
-                <img src="images/educationnormal.png" alt="Education" id="education" class="left-image" onclick="showDetails('education', event)">
-                <img src="images/personalitynormal.png" alt="Personality" id="personality" class="left-image" onclick="showDetails('personality', event)">
-                <img src="images/passionnormal.png" alt="Passion" id="passion" class="left-image" onclick="showDetails('passion', event)">
+                <img src="images/personalitynormal.png" alt="Personality" id="personality" class="left-image-top-left" onclick="showDetails('personality', event)">
+                <img src="images/passionnormal.png" alt="Passion" id="passion" class="left-image-top-right" onclick="showDetails('passion', event)">
             </div>
+
             <!-- Second Row of Images -->
             <div class="row">
+                <img src="images/educationnormal.png" alt="Education" id="education" class="left-image" onclick="showDetails('education', event)">
                 <img src="images/skillnormal.png" alt="Skill" id="skill" class="left-image" onclick="showDetails('skill', event)">
                 <img src="images/experiencenormal.png" alt="Experience" id="experience" class="left-image" onclick="showDetails('experience', event)">
             </div>
