--- a/myart.html
+++ b/myart.html
@@ -170,7 +170,7 @@
             </div>
         </section>
         <section class="right-section">
-            <img src="images/aboutme.png" alt="Sonia Wadhwani">
+            <img src="images/myart.png" alt="Sonia Wadhwani">
         </section>
     </main>
 
