--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            overflow-y: auto; /* Enable vertical scrolling for body */
+            overflow-y: auto;
         }
 
         header {
@@ -39,13 +39,14 @@
             flex: 1;
             display: flex;
             flex-direction: row;
-            overflow-y: auto; /* Enable vertical scrolling for main content */
+            overflow-y: auto;
         }
 
         .left-section {
             flex: 1;
             padding: 20px;
             padding-left: 40px;
+            overflow-y: auto;
         }
 
         .right-section {
@@ -53,7 +54,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            overflow: hidden;
+        }
+
+        .right-section img {
+            max-width: 100%;
+            height: 100%; /* Ensures the image stretches vertically to fill height */
+            object-fit: contain;
         }
 
         .large-text-l1, .large-text-l2 {
@@ -93,17 +99,10 @@
             margin-top: 5px;
         }
 
-        .right-section img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain; /* Ensure image resizes proportionally */
-        }
-
         footer {
             background-color: #F5F5F5;
             font-family: 'Trebuchet MS';
             text-align: center;
-            margin-top: auto;
             padding: 10px;
         }
 
