made all changes for responsive html

--- a/myart.html
+++ b/myart.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonia Wadhwani</title>
     <style>
-        * {
-            box-sizing: border-box;
-        }
 
         body {
             background-color: #839791;
@@ -16,6 +13,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
+            overflow-y: auto; /* Allow page-level scrolling */
         }
 
         header {
@@ -23,13 +21,18 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px;
+            flex-wrap: wrap;
+        }
+
+        header nav {
+            white-space: nowrap;
         }
 
         header a {
             text-decoration: none;
             color: black;
-            font-family: 'Droid Serif', serif;
-            margin: 0 15px;
+            font-family: 'Georgia';
+            margin: 0px 15px;
         }
 
         .logo {
@@ -40,41 +43,29 @@
 
         main {
             flex: 1;
-            overflow-y: auto;
-            padding: 20px;
             display: flex;
-            justify-content: center;
-            max-width: 100vw;
+            flex-direction: row;
         }
 
         .left-section {
-            flex: 0 0 70%;
+            flex: 1;
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            padding: 5px;
             gap: 10px;
-            cursor: pointer;
-            position: relative;
-            padding-top: 100px;
-        }
-
-        .image-container {
-            display: flex;
-            width: 80%; /* Adjusted to use 80% of the left section */
-            gap: 20px;
+            padding: 20px;
+            padding-top: 50px;
+            padding-left: 150px;
+            overflow: visible; /* Ensure no scrollbar on left-section */
         }
 
         .column {
             flex: 1;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            gap: 20px;
+            gap: 40px;
         }
 
         .column img {
-            width: 100%;
+            width: 90%;
             height: auto;
             border-radius: 8px;
             transition: transform 0.3s ease;
@@ -83,7 +74,23 @@
 
         .column img:hover {
             transform: scale(1.05);
-            z-index: 2;
+        }
+
+        .right-section {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            padding-top: 10px;
+            
+        }
+
+        .right-section img {
+            width: 80%;
+            height: auto; /* Maintain aspect ratio */
+            object-fit: cover;
+            border-bottom-left-radius: 50%;
+            border-bottom-right-radius: 50%;
         }
 
         .overlay {
@@ -122,8 +129,8 @@
             font-family: Arial, sans-serif;
             font-size: 1em;
             text-align: center;
-            width: 100%; /* Match the width of the image */
-            max-width: 70%; /* Keep it consistent with the image */
+            width: 100%;
+            max-width: 70%;
         }
 
         footer {
@@ -137,6 +144,39 @@
             text-decoration: none;
             color: black;
             margin: 0 10px;
+        }
+
+        @media (max-width: 768px) {
+            main {
+                flex-direction: column;
+            }
+
+            .right-section {
+                width: 100%;
+                height: auto;
+                padding: 10px;
+            }
+
+            .right-section img {
+                width: 75%;
+                height: auto;
+                object-fit: cover;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .logo {
+                width: 90px;
+                height: 45px;
+            }
+
+            header {
+                flex-direction: column;
+            }
+
+            .left-section {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
@@ -155,24 +195,21 @@
 
     <main>
         <section class="left-section">
-            <div class="image-container">
-                <div class="column" id="column1"></div>
-                <div class="column" id="column2"></div>
-                <div class="column" id="column3"></div>
-                <div class="column" id="column4"></div>
-            </div>
-
-            <div class="overlay" id="overlay" onclick="closeOverlay()">
-                <div class="overlay-content">
-                    <img src="" alt="Enlarged Image" id="overlayImage">
-                    <div class="text-box" id="overlayTextBox"></div>
-                </div>
-            </div>
+            <div class="column" id="column1"></div>
+            <div class="column" id="column2"></div>
+            <div class="column" id="column3"></div>
         </section>
         <section class="right-section">
             <img src="images/myart.png" alt="Sonia Wadhwani">
         </section>
     </main>
+
+    <div id="overlay" class="overlay" onclick="closeOverlay()">
+        <div class="overlay-content">
+            <img id="overlayImage" src="" alt="Overlay Image">
+            <div id="overlayTextBox" class="text-box"></div>
+        </div>
+    </div>
 
     <footer>
         <p>&copy; Sonia Wadhwani 2024</p>
@@ -199,21 +236,11 @@
         const columns = [
             document.getElementById('column1'),
             document.getElementById('column2'),
-            document.getElementById('column3'),
-            document.getElementById('column4')
+            document.getElementById('column3')
         ];
 
-        function shuffleArray(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
-            }
-            return array;
-        }
-
         function displayImages() {
-            const shuffledImages = shuffleArray([...images]);
-            shuffledImages.forEach((image, index) => {
+            images.forEach((image, index) => {
                 const img = document.createElement('img');
                 img.src = `images/${image.src}`;
                 img.alt = image.name;
