--- a/aboutme.html
+++ b/aboutme.html
@@ -8,11 +8,10 @@
         body {
             background-color: #839791;
             margin: 0;
-            font-family:  'Trebuchet MS';
+            font-family: 'Trebuchet MS';
             display: flex;
             flex-direction: column;
             height: 100vh;
-            min-height: 100vh;
         }
 
         header {
@@ -20,6 +19,11 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px;
+            flex-wrap: wrap;
+        }
+
+        header nav {
+            white-space: nowrap;
         }
 
         header a {
@@ -38,11 +42,12 @@
         main {
             flex: 1;
             display: flex;
-            overflow: hidden;
+            flex-direction: row;
+            overflow-y: auto;
         }
 
         .left-section {
-            flex: 0 0 60%;
+            flex: 1;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
@@ -52,7 +57,6 @@
             cursor: pointer;
         }
 
-        /* Adjust each row to occupy full width with two rows */
         .left-section .row {
             display: flex;
             width: 100%;
@@ -60,16 +64,17 @@
         }
 
         .right-section {
-            flex: 0 0 40%;
+            flex: 1;
             display: flex;
-            align-items: flex-start;
             justify-content: center;
+            align-items: flex-start;
+            padding-top: 10px;
         }
 
         .right-section img {
-            max-width: 80%;
-            max-height: 80vh;
-            object-fit: cover;
+            width: 80%;
+            height: 80%;
+            object-fit: contain;
             border-bottom-left-radius: 50%;
             border-bottom-right-radius: 50%;
         }
@@ -86,12 +91,12 @@
             transform: scale(1.1);
         }
 
-
         .left-image.enlarged {
             width: 40%;
             max-width: 300px;
             z-index: 1;
         }
+
         .left-image.shrinked {
             width: 25%;
             opacity: 0.5;
@@ -100,8 +105,9 @@
 
         footer {
             background-color: #F5F5F5;
-            font-family:  'Trebuchet MS';
+            font-family: 'Trebuchet MS';
             text-align: center;
+            padding: 10px;
             margin-top: auto;
         }
 
@@ -109,6 +115,44 @@
             text-decoration: none;
             color: black;
             margin: 0 10px;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            main {
+                flex-direction: column;
+            }
+
+            .right-section {
+                width: 100%;
+                height: auto;
+                padding: 10px;
+            }
+
+            .right-section img {
+                width: 75%;
+                height: auto;
+                object-fit: cover;
+            }
+
+            .left-section .left-image {
+                width: 35%; /* Slightly larger on smaller screens */
+            }
+        }
+
+        @media (max-width: 480px) {
+            .logo {
+                width: 90px;
+                height: 45px;
+            }
+
+            header {
+                flex-direction: column;
+            }
+
+            .left-section .left-image {
+                width: 45%; /* Fit more comfortably on very small screens */
+            }
         }
     </style>
 </head>
@@ -129,10 +173,9 @@
         <section class="left-section" onclick="resetImages(event)">
             <!-- First Row of Images -->
             <div class="row">
-                &nbsp;
-                <img src="images/personalitynormal.png" alt="Personality" id="personality" class="left-image" onclick="showDetails('personality', event)">
+                &nbsp;<img src="images/personalitynormal.png" alt="Personality" id="personality" class="left-image" onclick="showDetails('personality', event)">
                 <img src="images/passionnormal.png" alt="Passion" id="passion" class="left-image" onclick="showDetails('passion', event)">
-                &nbsp;    
+                &nbsp;
             </div>
 
             <!-- Second Row of Images -->
