--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,11 @@
         body {
             background-color: #EFD5C3;
             margin: 0;
-            font-family: 'Binate', sans-serif;
+            font-family: 'Trebuchet MS';
             display: flex;
             flex-direction: column;
-            min-height: 100vh;
+            height: 100vh;
+            overflow-y: hidden;
         }
 
         header {
@@ -20,12 +21,17 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px;
+            flex-wrap: wrap;
+        }
+
+        header nav {
+            white-space: nowrap;
         }
 
         header a {
             text-decoration: none;
             color: black;
-            font-family: 'Droid Serif', serif;
+            font-family: 'Georgia';
             margin: 0 15px;
         }
 
@@ -39,7 +45,7 @@
             display: flex;
             flex: 1;
             flex-direction: row;
-            overflow: hidden;
+            overflow-y: auto;
         }
 
         .left-section {
@@ -58,7 +64,7 @@
         .right-section img {
             width: auto;
             max-width: 100%;
-            height: 100%; /* Ensures the image stretches to fill height */
+            height: 100%;
             object-fit: cover;
         }
 
@@ -176,8 +182,10 @@
             }
 
             .right-section img {
-                width: 200px;
-                height: 200px;
+                width: auto;
+                max-width: 100%;
+                height: auto;
+                object-fit: contain; /* Ensures the image is fully visible on smaller screens */
             }
         }
 
@@ -188,8 +196,10 @@
             }
 
             .right-section img {
-                width: 150px;
-                height: 150px;
+                width: auto;
+                max-width: 100%;
+                height: auto;
+                object-fit: contain;
             }
 
             footer {
