--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px;
+            flex-wrap: wrap;
+        }
+
+        header nav {
+            white-space: nowrap;
         }
 
         header a {
